# adsm

./: .cmake  .hgignore  API.md  CMakeLists-cl.txt  CMakeLists-cuda.txt  CMakeLists-dbc.txt  CMakeLists-install.txt  CMakeLists-libs.txt  CMakeLists-lite.txt  CMakeLists-opencl.txt  CMakeLists-windows.txt  CMakeLists.txt  ChangeLog  Debugging.md  Examples.md  Execution.md  Guidelines.md  Install.md  LICENSE  MacOs.md  Main.md  Makefile.am  Papers.md  Presentations.md  ProjectHome.md  README  TableOfContents.md  Variables.md  acinclude.m4  configure  configure-dbc  configure.ac  cudalt.py  gmac.cmake
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile.am
doc/latex/: title.tex  user_manual.tex
lib/: CMakeLists.txt  Makefile.am
samples/: CMakeLists.txt
samples/VS_x86/: ALL_BUILD.vcproj  CMakeCache.txt  GMACSamples.sln  ZERO_CHECK.vcproj  clVecAdd.vcxproj  clVecAdd_cplusplus.vcxproj  cmake_install.cmake  eclThreadVecAdd.vcproj  eclThreadVecAdd.vcxproj  eclVecAdd.vcproj  eclVecAdd.vcxproj
samples/VS_x86_64/: ALL_BUILD.vcproj  CMakeCache.txt  GMACSamples.sln  ZERO_CHECK.vcproj  clVecAdd.vcxproj  clVecAdd_cplusplus.vcxproj  cmake_install.cmake  eclThreadVecAdd.vcproj  eclThreadVecAdd.vcxproj  eclVecAdd.vcproj  eclVecAdd.vcxproj
samples/cl/: clBinarySearch.cpp  clBitonicSort.cpp  clBlackScholes.cpp  clVecAdd.cpp  clVecAdd_cplusplus.cpp
samples/common/: utils.h
samples/ecl/: eclBitonicSort.cpp  eclBitonicSort_cplusplus.cpp  eclBlackScholes.cpp  eclBlackScholes_cplusplus.cpp  eclMonteCarloAsian_cplusplus.cpp  eclThreadVecAdd.cpp  eclVecAdd.cpp
src/: CMakeLists.txt  Makefile.am
src/api/: CMakeLists.txt  Makefile.am
src/common/: BatchManager.cpp  BatchManager.h  CacheManager.cpp  CacheManager.h  LazyManager.cpp  LazyManager.h  Makefile.am  MemManager.cpp  MemManager.h  MemRegion.cpp  MemRegion.h  StatManager.cpp  StatManager.h  config.cpp  config.h.in  debug.h  paraver.h  threads.h
src/config/: CMakeLists.txt  Makefile.am  common.h  config.h.in  dbc.h  debug.h  order.h  params.cpp  params.h  params.ipp  paraver.h  pthreads.h  ptr.h  threads.h
src/core/: Accelerator-impl.h  Accelerator.cpp  Accelerator.h  Accelerator.ipp  AllocationMap-impl.h  AllocationMap.h  CMakeLists.txt  Context.cpp  Context.h  Descriptor-impl.h  Descriptor.h  Descriptor.ipp  IOBuffer-impl.h  IOBuffer.h  IOBuffer.ipp  Kernel-impl.h  Kernel.cpp  Kernel.h  Kernel.ipp  Makefile.am  Map.cpp  Map.h  Mode-impl.h  Mode.cpp  Mode.h  Mode.ipp  Process-impl.h  Process.cpp  Process.h  Process.ipp  Queue.cpp  Queue.h  ResourceManager.cpp  ResourceManager.h  Thread-impl.h  Thread.cpp  Thread.h  address_space-impl.h  address_space.h  io_buffer-impl.h  (+8 more)
src/cuda/: api.h  cuda.cpp
src/cudadrv/: Makefile.am  api.h  compat.cpp  cuda.cpp  driver.cpp  driver.h
src/dbc/: CMakeLists.txt  Contract.cpp  Contract.h
src/dsm/: .mapping.h.swp  CMakeLists.txt  coherence.h  error.h  manager-impl.h  manager.cpp  manager.h  mapping-impl.h  mapping.cpp  mapping.h  types.h
src/gmac/: CMakeLists.txt  Makefile.am  gmac.cpp  gmac.h  init.cpp  init.h  paraver.cpp  paraver.h
src/hal/: CMakeLists.txt  CoherenceDomain.h  Device.cpp  Device.h  aspace-impl.h  aspace.cpp  aspace.h  coherence_domain-impl.h  coherence_domain.h  context-impl.h  context.h  copy.cpp  device-impl.h  device.cpp  device.h  error.h  event-impl.h  event.h  kernel-impl.h  kernel.h  platform-impl.h  platform.cpp  platform.h  ptr-impl.h  ptr.h  stream-impl.h  stream.h  types-detail.h  types-impl.h  types.h
src/hpe/: CMakeLists.txt  gmac.cpp  init.cpp  init.h
src/include/: CMakeLists.txt  gmac-types.h  gmac.h  visibility.h
src/inter/: Makefile.am  memory.cpp
src/kernel/: Accelerator.cpp  Accelerator.h  Accelerator.ipp  Context.cpp  Context.h  Context.ipp  Descriptor.h  Descriptor.ipp  IAccelerator.h  IOBuffer.cpp  IOBuffer.h  IOBuffer.ipp  Kernel.cpp  Kernel.h  Kernel.ipp  Makefile.am  MemoryTransfer.h  Mode.cpp  Mode.h  Mode.ipp  Process.cpp  Process.h  Process.ipp  Queue.cpp  Queue.h  Queue.ipp  System.cpp  System.h
src/lib/: Makefile.am  cuda.cpp  cuda.h  gmac.cpp  gmac.h  paraver.cpp  paraver.h  shcuda.cpp  shcuda.h
src/libs/: common.cpp  common.h
src/memory/: AcceleratorBlock.h  AcceleratorBlock.ipp  Allocator.cpp  Allocator.h  Allocator.ipp  BatchManager.cpp  BatchManager.h  Bitmap-impl.h  Bitmap.cpp  Bitmap.h  Bitmap.ipp  Block-impl.h  Block.cpp  Block.h  Block.ipp  BlockGroup-impl.h  BlockGroup.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  CacheRegion.cpp  CacheRegion.h  CentralizedObject.h  CentralizedObject.ipp  DistributedBlock-impl.h  DistributedBlock.h  DistributedObject-impl.h  DistributedObject.cpp  DistributedObject.h  GenericBlock-impl.h  GenericBlock.h  Handler.cpp  Handler.h  HostBlock-impl.h  HostBlock.h  HostMappedObject-impl.h  HostMappedObject.cpp  HostMappedObject.h  HostObject-impl.h  HostObject.h  (+95 more)
src/os/: CMakeLists.txt  Makefile.am
src/paraver/: Element.cpp  Element.h  Makefile.am  Names.h  Pcf.cpp  Pcf.h  Record.cpp  Record.h  Time.h  Trace.cpp  Trace.h  Types.cpp  Types.h  makepcf.cpp  paraver.cpp  prb2prv.cpp  threads.h
src/posix/: loader.h
src/std/: Process.h
src/test/: CMakeLists.txt  Contract.cpp  Contract.h  types.h
src/trace/: CMakeLists.txt  Console.cpp  Console.h  Function.cpp  Function.h  Makefile.am  Paraver.cpp  Paraver.h  States-def.h  States.h  Thread.cpp  Thread.h  Tracer-impl.h  Tracer.cpp  Tracer.h  logger-impl.h  logger.cpp  logger.h
src/util/: Atomics.h  Lock.cpp  (+71 more)
tests/: CMakeLists.txt  Makefile.am  bandwidth.cu  bandwidth.plot  barrier.c  barrier.h  debug.h  gmacAlloc.cu  gmacCompress.cu  gmacCompressSend.cu  gmacConstant.cu  gmacFileVecAdd.cu  gmacMatrixMul.cu  gmacMatrixMulKernel.cu  gmacMatrixMulSimple.cu  gmacMemcpy.cu  gmacMemset.cu  gmacMigration.cu  gmacPingPong.cu  gmacSharedThread.cu  gmacSharedVecAdd.cu  gmacSteady.cu  gmacStencil.cu  gmacStencilCommon.cu  gmacTests.py  gmacTexture.cu  gmacThreadStencil.cu  gmacThreadVecAdd.cu  gmacVecAdd.cu  shVecAdd.cu  signal.cpp  signal.plot  test.c  test.h  threadBandwidth.cu  time.h  transferBlocks.cu  utils.c  utils.cpp  utils.h  (+6 more)
(+1116 files in other folders)
